--- a/.github/workflows/update-feed.yaml
+++ b/.github/workflows/update-feed.yaml
@@ -1,10 +1,13 @@
 name: Update this repo's README with Latest Posts
 
-on:
-  schedule:
-    # Once a day at 8 AM
-    - cron: 0 8 * * *
+# on:
+#   schedule:
+#     # Once a day at 8 AM
+#     - cron: 0 8 * * *
 
+on:
+  workflow_dispatch:
+  
 jobs:
   update:
     runs-on: ubuntu-latest
