--- a/.github/workflows/update-feed.yaml
+++ b/.github/workflows/update-feed.yaml
@@ -7,7 +7,7 @@ name: Update this repo's README with Latest Posts
 
 on:
   workflow_dispatch:
-  
+
 jobs:
   update:
     runs-on: ubuntu-latest
@@ -16,3 +16,4 @@ jobs:
         with:
           feed-url: https://blog.radovanovigor.com/rss.xml
           readme-section: feed
+          branch: main
