--- a/.github/workflows/update-feed.yaml
+++ b/.github/workflows/update-feed.yaml
@@ -16,4 +16,4 @@ jobs:
         with:
           feed-url: https://blog.radovanovigor.com/rss.xml
           readme-section: feed
-          branch: main
+          branch: master
